# suffix-array-library

./: .gitignore  CMakeLists.txt  README.md  suffix_array.hpp  test.cpp
